--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,7 +13,7 @@
     <div class="w-full min-h-screen bg-zinc-900 text-white p-10">
         <a href="/register" class="text-blue-500">Not registered yet?</a>
         <h3 class="text-3xl mb-5 tracking-tighter mt-5">Login Account</h3>
-        <form action="" method="post">
+        <form action="/login" method="post">
             <input class="outline-none px-3 py-2 bg-transparent border-2 border-zinc-800 rounded-ml" type="email" placeholder="Enter email here" name="email">
             <input class="outline-none px-3 py-2 bg-transparent border-2 border-zinc-800 rounded-ml" type="password" placeholder="Enter password here" name="password">
             <input class="px-5 py-2 rounded-mg bg-blue-500" type="submit" value="Login Account">
