--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="w-full min-h-screen bg-zinc-900 text-white p-10">
         <div class="flex w-full justify-end">
-            <a href="/" class="text-red-500">Logout</a>
+            <a href="/logout" class="text-red-500">Logout</a>
         </div>
     </div>
 </body>
